# RLHF_llama

./: .gitignore  README.md  pyproject.toml  reward_model_train.py  rlfh_only_training.py  rlhf_train.py
feedback_data/: feedback.csv
